@@ -11,6 +11,9 @@ BUGFIXES:
   ZOOKEEPER-2146 BinaryInputArchive readString should check length before
   allocating memory (Hongchao Deng via michim)
 
+  ZOOKEEPER-1256: ClientPortBindTest is failing on Mac OS X
+  (Camille via phunt)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1575. adding .gitattributes to prevent CRLF and LF mismatches for
